# Space-Efficient-Document-Fingerprinting

./: CMakeLists.txt  README.md  Space Efficieent Document Fingerprinting.pptx  app.py
dataset/: essay 11.txt  essay 13.txt  essay 15.txt  essay 9.txt  essay12.txt  essay16.txt  essay17.txt  essay18.txt  essay19.txt  essay20.txt  essay21.txt  essay22.txt  essay23.txt  essay24.txt  essay25.txt  essay26.txt  essay27.txt  essay28.txt  essay29.txt  essay3.txt  essay30.txt  essay31.txt  essay32.txt  essay33.txt  essay34.txt  essay35.txt  essay36.txt  essay37.txt  essay38.txt  essay39.txt  essay40.txt  essay41.txt  essay42.txt
dataset/test/: test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test20.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
dataset_cbf/: essay 1.txt.cbf  essay 1.txt.minhash  essay 10.txt.cbf  essay 10.txt.minhash  essay 10.txt.rkhash  essay 11.txt.cbf  essay 11.txt.minhash  essay 12.txt.cbf  essay 12.txt.rkhash  essay 13.txt.cbf  essay 13.txt.minhash  essay 13.txt.rkhash  essay 14.txt.cbf  essay 14.txt.rkhash  essay 15.txt.cbf  essay 2.txt.cbf  essay 2.txt.minhash  essay 2.txt.rkhash  essay 3.txt.cbf  essay 3.txt.minhash  essay 4.txt.cbf  essay 4.txt.minhash  essay 4.txt.rkhash  essay 5.txt.cbf  essay 5.txt.rkhash  essay 6.txt.cbf  essay 6.txt.rkhash  essay 7.txt.cbf  essay 7.txt.rkhash  essay 8.txt.cbf  essay 8.txt.minhash  essay 8.txt.rkhash  essay 9.txt.cbf  essay 9.txt.minhash  essay 9.txt.rkhash  essay1.txt.cbf  essay1.txt.minhash  essay1.txt.rkhash  essay10.txt.cbf  essay10.txt.minhash  (+121 more)
implementation/: CMakeLists.txt
implementation/src/: countingbloomfilter.cpp  countingbloomfilter.h  fingerprint.cpp  fingerprint.h  indexing.cpp  indexing.h  main.cpp  minhash.cpp  minhash.h  utils.h
implementation/tests/: essay 1.txt  essay 10.txt  essay 14.txt  essay 2.txt  essay 6.txt  essay 7.txt
include/: CountingBloomFilter.h  MinHash.h  RabinKarp.h
src/: CountingBloomFilter.cpp  MinHash.cpp  RabinKarp.cpp  main.cpp
templates/: index.html  result.html
test/: test_CountingBloomFilter.cpp  test_MinHash.cpp  test_RabinKarp.cpp  test_cbf.cpp  test_rabin_karp.cpp
uploads/: essay 4.txt  essay 5.txt  essay 8.txt
